ESLint + gulping bootstrap

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="vendors.css" />
 </head>
 <body>
-    <h1>Hello World!!!!</h1>
-    <script defer src="app.js"></script>
+    <h1 class="jumbotron">Hello World!!</h1>
+    <script defer src="vendors.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
