--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="vendors.css" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <h1 class="jumbotron">Hello World!!</h1>
