--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,9 @@
     <link rel="stylesheet" href="vendors.css" />
     <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
-    <h1 class="jumbotron">Hello World!!</h1>
+<body class=".body">
+    <h1 class="jumbotron">React Tutorial</h1>
+    <div id="view" />
     <script defer src="vendors.js"></script>
     <script src="app.js"></script>
 </body>
