--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="vendors.css" />
     <link rel="stylesheet" href="styles.css" />
 </head>
-<body class=".body">
+<body class="body">
     <div id="view" />
     <script defer src="vendors.js"></script>
     <script src="app.js"></script>
